plusieurs maj, changement ordre header

--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
     <header>
         <nav>
             <a href="#about">à propos</a>
+            <a href="#projects">projets</a>
             <a href="#photos">photos</a>
-            <a href="/pages/projects.html">projets</a>
             <a href="#contact">me contacter</a>
             <button onclick="handleMenu()">menu</button>
         </nav>
@@ -131,17 +131,17 @@
                 <p>(02) <span>Escapades Temporelles</span></p> <!-- Titre du projet -->
             </a>
 
-            <a href="/pages/projects/firstMotion.html" class="card background-image" style="background-image: url('/images/miniatures/miniature-public-actif.webp');background-size: cover;"> <!-- image du projet(url) & lien vers la page(href) -->
+            <a href="/pages/projects/publicActif.html" class="card background-image" style="background-image: url('/images/miniatures/miniature-public-actif.webp');background-size: cover;"> <!-- image du projet(url) & lien vers la page(href) -->
                 <p>(01) <span>Théories animées</span></p> <!-- Titre du projet -->
             </a>
         </div>
 
         <div class="container">
-            <a href="#" class="card background-image" style="background-image: url('/images/miniatures/miniature-befake.webp');background-size: cover;"> <!-- image du projet(url) & lien vers la page(href) -->
+            <a href="/pages/projects/beFake.html" class="card background-image" style="background-image: url('/images/miniatures/miniature-befake.webp');background-size: cover;"> <!-- image du projet(url) & lien vers la page(href) -->
                 <p>(03) <span>BeFake.</span></p> <!-- Titre du projet -->
             </a>
 
-            <a href="#" class="card background-image" style="background-image: url('/images/miniatures/miniature-refonte-musba.webp');background-size: cover;"> <!-- image du projet(url) & lien vers la page(href) -->
+            <a href="/pages/projects/refonteMusba.html" class="card background-image" style="background-image: url('/images/miniatures/miniature-refonte-musba.webp');background-size: cover;"> <!-- image du projet(url) & lien vers la page(href) -->
                 <p>(04) <span>Refonte MusBa</span></p> <!-- Titre du projet -->
             </a>
         </div>
