--- a/pages/projects.html
+++ b/pages/projects.html
@@ -12,8 +12,8 @@
     <header>
         <nav>
             <a href="/index.html#about">à propos</a>
-            <a href="/index.html#photos">audiovisuel</a>
             <a href="/index.html#projects">projets</a>
+            <a href="/index.html#photos">photos</a>
             <a href="/index.html#contact">me contacter</a>
             <button onclick="handleMenu()">menu</button>
         </nav>
@@ -22,8 +22,8 @@
     <section id="menu">
         <nav>
             <a href="/index.html#about" onclick="handleMenu()">à propos</a>
-            <a href="/index.html#photos" onclick="handleMenu()">audiovisuel</a>
             <a href="/index.html#projects" onclick="handleMenu()">projets</a>
+            <a href="/index.html#photos" onclick="handleMenu()">photos</a>
             <a href="/index.html#contact" onclick="handleMenu()">me contacter</a>
             <button onclick="handleMenu()">close</button>
         </nav>
@@ -35,27 +35,35 @@
 
     <section id="all-projects">
 
-        <a href="/pages/projects/firstMotion.html"><div class="project">
-            <div class="background-image" style="background-image: url('/images/photos/img4.svg');"></div>
+        <a href="/pages/projects/publicActif.html"><div class="project">
+            <div class="background-image" style="background-image: url('/images/miniatures/miniature-public-actif.webp');background-size: cover;"></div>
             <div class="text">
-                <p class="title">Packshot Chocolatines</p>
-                <p class="text">Photographie de pains au chocolat dans un cadre professionnel.</p>
+                <p class="title">Public Actif</p>
+                <p class="text">Animation de la théorie du Public Actif de Gabriel Tarde.</p>
             </div>
         </div></a>
 
         <a href="/index.html"><div class="project">
-            <div class="background-image" style="background-image: url('/images/photos/img4.svg');"></div>
+            <div class="background-image" style="background-image: url('/images/miniatures/miniature-escapades-temporelles.webp');background-size: cover;"></div>
             <div class="text">
-                <p class="title">Packshot Chocolatines</p>
-                <p class="text">Photographie de pains au chocolat dans un cadre professionnel.</p>
+                <p class="title">Escapades Temporelles</p>
+                <p class="text">Réalisation d’un jeu-vidéo basé sur le voyage dans le temps.</p>
             </div>
         </div></a>
 
         <a href="/index.html"><div class="project">
-            <div class="background-image" style="background-image: url('/images/photos/img4.svg');"></div>
+            <div class="background-image" style="background-image: url('/images/miniatures/miniature-befake.webp');background-size: cover;"></div>
             <div class="text">
-                <p class="title">Packshot Chocolatines</p>
-                <p class="text">Photographie de pains au chocolat dans un cadre professionnel.</p>
+                <p class="title">BeFake.</p>
+                <p class="text">Développement d'un réseau social de partage de photos.</p>
+            </div>
+        </div></a>
+
+        <a href="/index.html"><div class="project">
+            <div class="background-image" style="background-image: url('/images/miniatures/miniature-refonte-musba.webp');background-size: cover;"></div>
+            <div class="text">
+                <p class="title">Refonte MusBA</p>
+                <p class="text">Refonte graphique du site du Musée des Beaux Arts de Bordeaux.</p>
             </div>
         </div></a>
 
