ajout de la page befake

--- a/pages/projects/beFake.html
+++ b/pages/projects/beFake.html
@@ -6,14 +6,14 @@
     <link rel="stylesheet" href="/css/reset.css">
     <link rel="stylesheet" href="/css/main.css">
     <script src="/js/handleMenu.js" defer></script>
-    <title>Tom Wainberg - Théorie animée</title>
+    <title>Tom Wainberg - BeFake</title>
 </head>
 <body>
     <header>
         <nav>
             <a href="/index.html#about">à propos</a>
-            <a href="/index.html#photos">audiovisuel</a>
             <a href="/index.html#projects">projets</a>
+            <a href="/index.html#photos">photos</a>
             <a href="/index.html#contact">me contacter</a>
             <button onclick="handleMenu()">menu</button>
         </nav>
@@ -22,48 +22,43 @@
     <section id="menu">
         <nav>
             <a href="/index.html#about" onclick="handleMenu()">à propos</a>
-            <a href="/index.html#photos" onclick="handleMenu()">audiovisuel</a>
             <a href="/index.html#projects" onclick="handleMenu()">projets</a>
+            <a href="/index.html#photos" onclick="handleMenu()">photos</a>
             <a href="/index.html#contact" onclick="handleMenu()">me contacter</a>
             <button onclick="handleMenu()">close</button>
         </nav>
     </section>
 
     <section id="project-page-title">
-        <h1><span>(01) </span>Théorie animée</h1>
+        <h1><span>(01) </span>BeFake.</h1>
         <p>
-            En une minute, avec <a href="https://simondaguetkargl.fr/" target="_blank">Simon Daguet--Kargl</a>, nous avons vulgarisé la théorie du Public Actif de Gabriel Tarde, illustrée dans un style de flat design mis en perspective. L'objectif était de rendre nos explications non seulement esthétiques, mais surtout ludiques.
-            
+            Nous avions comme objectif, avec <a href="https://simondaguetkargl.fr/" target="_blank">Simon Daguet--Kargl</a>, de réaliser un site web avec Ruby on Rails utilisant la technologie de génération d’image Midjourney. Nous avons alors eu l’idée de mettre en scène le réseau social se déclarant comme le plus authentique, avec cette technologie qui permet de créer n’importe quelle image factice en quelques secondes.            
         </p>
        
         <p>
-            Tout cela a été réalisé dans un délai de 4 jours, dans le cadre de la formation MMI (novembre 2023).
-        </p>
+            Tout cela a été réalisé dans un délai de 4 jours, dans le cadre de la formation MMI (février 2023).        </p>
     </section>
 
     <section id="firstMotion">
 
         <div class="project">
-            <div class="background-image" style="background-image: url(/images/projets/public-actif-1.webp);background-size: cover;"></div>
+            <div class="background-image" style="background-image: url(/images/projets/befake-1.webp);background-size: cover;"></div>
             <div class="text">
-                <p class="title">Packshot Chocolatines</p>
-                <p class="text">Photographie de pains au chocolat dans un cadre professionnel.</p>
+                <p class="text">Il fallait repenser l’interface utilisateur de BeReal afin de l’adapter à tous les formats d’écran, l’application n’étant disponible que sur smartphone. Cela nous a aussi permis de réfléchir aux différentes fonctionnalités que nous allions implémenter.</p>
             </div>
         </div>
 
         <div class="project">
-            <div class="background-image" style="background-image: url(/images/projets/public-actif-2.webp);;background-size: cover;"></div>
+            <div class="background-image" style="background-image: url(/images/projets/befake-2.webp);;background-size: cover;"></div>
             <div class="text">
-                <p class="title">Packshot Chocolatines</p>
-                <p class="text">Photographie de pains au chocolat dans un cadre professionnel.</p>
+                <p class="text">Il est possible d’importer deux images (caméra frontale et arrière), le nom d’utilisateur, une courte description et la localisation du post, à la manière de l’application originale.</p>
             </div>
         </div>
 
         <div class="project">
-            <div class="background-image" style="background-image: url(/images/projets/public-actif-3.webp);;background-size: cover;"></div>
+            <div class="background-image" style="background-image: url(/images/projets/befake-3.webp);;background-size: cover;"></div>
             <div class="text">
-                <p class="title">Packshot Chocolatines</p>
-                <p class="text">Photographie de pains au chocolat dans un cadre professionnel.</p>
+                <p class="text">Enfin, nous avons enregistré et retravaillé la plupart des bruitages de la vidéo afin de donner vie à notre univers.</p>
             </div>
         </div>
 
