--- a/pages/projects/publicActif.html
+++ b/pages/projects/publicActif.html
@@ -12,8 +12,8 @@
     <header>
         <nav>
             <a href="/index.html#about">à propos</a>
-            <a href="/index.html#photos">audiovisuel</a>
             <a href="/index.html#projects">projets</a>
+            <a href="/index.html#photos">photos</a>
             <a href="/index.html#contact">me contacter</a>
             <button onclick="handleMenu()">menu</button>
         </nav>
@@ -22,8 +22,8 @@
     <section id="menu">
         <nav>
             <a href="/index.html#about" onclick="handleMenu()">à propos</a>
-            <a href="/index.html#photos" onclick="handleMenu()">audiovisuel</a>
             <a href="/index.html#projects" onclick="handleMenu()">projets</a>
+            <a href="/index.html#photos" onclick="handleMenu()">photos</a>
             <a href="/index.html#contact" onclick="handleMenu()">me contacter</a>
             <button onclick="handleMenu()">close</button>
         </nav>
