--- a/index.html
+++ b/index.html
@@ -91,37 +91,12 @@
             j'aime exprimer ma créativité à travers n'importe quelle forme artistique à ma disposition.
         </p>
         <div>
-            <a class="cta" href="#photos">photos</a>
-            <a class="cta" href="#projects">projets</a>
-            <a class="cta" href="/pages/projects.html">tous mes projets</a>
+            <a class="cta" href="#projects">mes projets</a>
+            <a class="cta" href="#photos">mes photos</a>
+
         </div>
     </section>
 
-
-    <section id="photos">
-        <div class="particles-js" id="particles-js-photos"></div>
-        <h2>Photos</h2>
-
-        <div class="container">
-            <a href="#"class="card background-image" style="background-image: url('/images/photos/img2.svg')"> <!-- image du projet(url) & lien vers la page(href) -->
-                <p>(02) <span>Paris</span></p> <!-- Titre du projet -->
-            </a>
-
-            <a href="/pages/projects/firstMotion.html" class="card background-image" style="background-image: url('/images/miniatures/miniature-public-actif.webp');background-size: cover;"> <!-- image du projet(url) & lien vers la page(href) -->
-                <p>(01) <span>Bordeaux</span></p> <!-- Titre du projet -->
-            </a>
-        </div>
-
-        <div class="container">
-            <a href="#" class="card background-image" style="background-image: url('/images/photos/img3.svg')"> <!-- image du projet(url) & lien vers la page(href) -->
-                <p>(03) <span>Explorations Urbaines</span></p> <!-- Titre du projet -->
-            </a>
-
-            <a href="#" class="card background-image" style="background-image: url('/images/photos/img4.svg')"> <!-- image du projet(url) & lien vers la page(href) -->
-                <p>(04) <span>Montagne</span></p> <!-- Titre du projet -->
-            </a>
-        </div>
-    </section>
     <section id="projects">
         <div class="particles-js" id="particles-js-projects"></div>
         <h2>Projets</h2>
@@ -148,6 +123,31 @@
 
         <a class="cta" href="/pages/projects.html">plus de projets</a>
     </section>
+    <section id="photos">
+        <div class="particles-js" id="particles-js-photos"></div>
+        <h2>Photos</h2>
+
+        <div class="container">
+            <a href="#"class="card background-image" style="background-image: url('/images/photos/img2.svg')"> <!-- image du projet(url) & lien vers la page(href) -->
+                <p>(02) <span>Paris</span></p> <!-- Titre du projet -->
+            </a>
+
+            <a href="/pages/projects/firstMotion.html" class="card background-image" style="background-image: url('/images/miniatures/miniature-public-actif.webp');background-size: cover;"> <!-- image du projet(url) & lien vers la page(href) -->
+                <p>(01) <span>Bordeaux</span></p> <!-- Titre du projet -->
+            </a>
+        </div>
+
+        <div class="container">
+            <a href="#" class="card background-image" style="background-image: url('/images/photos/img3.svg')"> <!-- image du projet(url) & lien vers la page(href) -->
+                <p>(03) <span>Explorations Urbaines</span></p> <!-- Titre du projet -->
+            </a>
+
+            <a href="#" class="card background-image" style="background-image: url('/images/photos/img4.svg')"> <!-- image du projet(url) & lien vers la page(href) -->
+                <p>(04) <span>Montagne</span></p> <!-- Titre du projet -->
+            </a>
+        </div>
+    </section>
+   
 
 
     <section id="contact"> <!-- possibilité de dubliquer un 'li' pour rajouter un lien -->
