Ajout des miniatures sur la section photos de l'accueil

--- a/index.html
+++ b/index.html
@@ -128,22 +128,24 @@
         <h2>Photos</h2>
 
         <div class="container">
-            <a href="#"class="card background-image" style="background-image: url('/images/photos/img2.svg')"> <!-- image du projet(url) & lien vers la page(href) -->
-                <p>(02) <span>Paris</span></p> <!-- Titre du projet -->
+            <a href="#" class="card background-image" style="background-image: url('/images/photos/miniature-bordeaux.webp');background-size: cover;"> <!-- image du projet(url) & lien vers la page(href) -->
+                <p>(02) <span>Bordeaux</span></p> <!-- Titre du projet -->
             </a>
 
-            <a href="/pages/projects/firstMotion.html" class="card background-image" style="background-image: url('/images/miniatures/miniature-public-actif.webp');background-size: cover;"> <!-- image du projet(url) & lien vers la page(href) -->
-                <p>(01) <span>Bordeaux</span></p> <!-- Titre du projet -->
+            <a href="#"class="card background-image" style="background-image: url('/images/photos/miniature-paris.webp');background-size: cover;"> <!-- image du projet(url) & lien vers la page(href) -->
+
+                <p>(01) <span>Paris</span></p> <!-- Titre du projet -->
             </a>
         </div>
 
         <div class="container">
-            <a href="#" class="card background-image" style="background-image: url('/images/photos/img3.svg')"> <!-- image du projet(url) & lien vers la page(href) -->
-                <p>(03) <span>Explorations Urbaines</span></p> <!-- Titre du projet -->
-            </a>
+            <a href="#" class="card background-image" style="background-image: url('/images/photos/miniature-montagne.webp');background-size: cover;"> <!-- image du projet(url) & lien vers la page(href) -->
 
-            <a href="#" class="card background-image" style="background-image: url('/images/photos/img4.svg')"> <!-- image du projet(url) & lien vers la page(href) -->
-                <p>(04) <span>Montagne</span></p> <!-- Titre du projet -->
+                <p>(03) <span>Montagne</span></p> <!-- Titre du projet -->
+            </a>
+            <a href="#" class="card background-image" style="background-image: url('/images/photos/miniature-urbex.webp');background-size: cover;"> <!-- image du projet(url) & lien vers la page(href) -->
+
+                <p>(04) <span>Explorations Urbaines</span></p> <!-- Titre du projet -->
             </a>
         </div>
     </section>
