--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                 Étudiant de première année en BUT Métiers du Multimédia et de l'Internet à l'IUT Bordeaux Montaigne.
             </p>
         </div>
-        <img src="images/portrait.webp" alt="portrait">
+        <img src="images/photoEdgar2LRPSLR.webp" alt="portrait">
     </section>
     <a href="#about" class="scrollCall">
         <img src="images/arrow-scroll-call.svg" alt="flèche de l'appel à défilement">
