--- a/pages/projects/escapadesTemporelles.html
+++ b/pages/projects/escapadesTemporelles.html
@@ -33,9 +33,9 @@
         <h1><span>(02) </span>Escapades Temporelles</h1>
         <p>
             J'ai été impliqué en tant que chef de projet, directeur artistique, et scénariste dans la conception et le développement d'Escapades Temporelles, un jeu d'aventure et de réflexion, en collaboration avec deux camarades.
-            Nous avons été récompensés du prix du meilleur jeu dans la catégorie lycéenne. aux Hauts-de-Seine Digital Games.            
+            Nous avons été récompensés du prix du meilleur jeu dans la catégorie lycéenne aux <a href="https://digital-games.hauts-de-seine.fr/" target="_blank">Hauts-de-Seine Digital Games</a>.            
         </p>
-       
+        
         <p>
             Tout cela a été réalisé dans un cadre hors-scolaire, avec le soutien de notre professeur de NSI (octobre 2022-avril 2023).        </p>
     </section>
