--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="fr">
+
 <head prefix="og: http://ogp.me/ns#">
 
     <title>Accueil - Tom Wainberg</title>
@@ -20,11 +21,13 @@
     <link rel="canonical" href="https://tomwainberg.netlify.app/" />
 
     <meta name="subject" content="undefined">
-    <meta name="description" content="Portfolio Tom Wainberg. Étudiant au BUT MMI Bordeaux Montaigne. Découvrez mes projets, mes photos et mes vidéos. Vous trouverez mon LinkedIn, mon CV, mes réseaux..." />
+    <meta name="description"
+        content="Portfolio Tom Wainberg. Étudiant au BUT MMI Bordeaux Montaigne. Découvrez mes projets, mes photos et mes vidéos. Vous trouverez mon LinkedIn, mon CV, mes réseaux..." />
 
     <meta property="og:title" content="Accueil" />
     <meta property="og:type" content="website" />
-    <meta property="og:description" content="Portfolio Tom Wainberg. Étudiant au BUT MMI Bordeaux Montaigne. Découvrez mes projets, mes photos et mes vidéos. Vous trouverez mon LinkedIn, mon CV, mes réseaux..." />
+    <meta property="og:description"
+        content="Portfolio Tom Wainberg. Étudiant au BUT MMI Bordeaux Montaigne. Découvrez mes projets, mes photos et mes vidéos. Vous trouverez mon LinkedIn, mon CV, mes réseaux..." />
     <meta property="og:site_name" content="Tom Wainberg" />
     <meta property="og:url" content="https://tomwainberg.netlify.app/" />
     <meta property="og:locale" content="fr" />
@@ -32,7 +35,8 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta property="twitter:url" content="https://tomwainberg.netlify.app/">
     <meta name="twitter:title" content="Accueil - Tom Wainberg" />
-    <meta name="twitter:description" content="Portfolio Tom Wainberg. Étudiant au BUT MMI Bordeaux Montaigne. Découvrez mes projets, mes photos et mes vidéos. Vous trouverez mon LinkedIn, mon CV, mes réseaux..." />
+    <meta name="twitter:description"
+        content="Portfolio Tom Wainberg. Étudiant au BUT MMI Bordeaux Montaigne. Découvrez mes projets, mes photos et mes vidéos. Vous trouverez mon LinkedIn, mon CV, mes réseaux..." />
 
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-title" content="Accueil" />
@@ -47,6 +51,7 @@
 
 
 </head>
+
 <body>
     <!-- HEADER / NAV / MENU -->
     <header>
@@ -103,21 +108,25 @@
         <h2>Projets</h2>
 
         <div class="container">
-            <a href="/pages/projects/escapadesTemporelles.html"class="card background-image" style="background-image: url('/images/miniatures/miniature-escapades-temporelles.webp');background-size: cover;"> <!-- image du projet(url) & lien vers la page(href) -->
+            <a href="/pages/projects/escapadesTemporelles.html" class="card background-image" id="card-escapades">
+                <!-- image du projet(url) & lien vers la page(href) -->
                 <p>(02) <span>Escapades Temporelles</span></p> <!-- Titre du projet -->
             </a>
 
-            <a href="/pages/projects/publicActif.html" class="card background-image" style="background-image: url('/images/miniatures/miniature-public-actif.webp');background-size: cover;"> <!-- image du projet(url) & lien vers la page(href) -->
+            <a href="/pages/projects/publicActif.html" class="card background-image" id="card-theories">
+                <!-- image du projet(url) & lien vers la page(href) -->
                 <p>(01) <span>Théories animées</span></p> <!-- Titre du projet -->
             </a>
         </div>
 
         <div class="container">
-            <a href="/pages/projects/beFake.html" class="card background-image" style="background-image: url('/images/miniatures/miniature-befake.webp');background-size: cover;"> <!-- image du projet(url) & lien vers la page(href) -->
+            <a href="/pages/projects/beFake.html" class="card background-image" id="card-befake">
+                <!-- image du projet(url) & lien vers la page(href) -->
                 <p>(03) <span>BeFake.</span></p> <!-- Titre du projet -->
             </a>
 
-            <a href="/pages/projects/refonteMusba.html" class="card background-image" style="background-image: url('/images/miniatures/miniature-refonte-musba.webp');background-size: cover;"> <!-- image du projet(url) & lien vers la page(href) -->
+            <a href="/pages/projects/refonteMusba.html" class="card background-image" id="card-musba">
+                <!-- image du projet(url) & lien vers la page(href) -->
                 <p>(04) <span>Refonte MusBa</span></p> <!-- Titre du projet -->
             </a>
         </div>
@@ -129,40 +138,52 @@
         <h2>Photos</h2>
 
         <div class="container">
-            <a href="#" class="card background-image" style="background-image: url('/images/photos/miniature-bordeaux.webp');background-size: cover;"> <!-- image du projet(url) & lien vers la page(href) -->
+            <a href="#" class="card background-image"
+                style="background-image: url('/images/photos/miniature-bordeaux.webp');background-size: cover;">
+                <!-- image du projet(url) & lien vers la page(href) -->
                 <p>(02) <span>Bordeaux</span></p> <!-- Titre du projet -->
             </a>
 
-            <a href="#"class="card background-image" style="background-image: url('/images/photos/miniature-paris.webp');background-size: cover;"> <!-- image du projet(url) & lien vers la page(href) -->
+            <a href="#" class="card background-image"
+                style="background-image: url('/images/photos/miniature-paris.webp');background-size: cover;">
+                <!-- image du projet(url) & lien vers la page(href) -->
 
                 <p>(01) <span>Paris</span></p> <!-- Titre du projet -->
             </a>
         </div>
 
         <div class="container">
-            <a href="#" class="card background-image" style="background-image: url('/images/photos/miniature-montagne.webp');background-size: cover;"> <!-- image du projet(url) & lien vers la page(href) -->
+            <a href="#" class="card background-image"
+                style="background-image: url('/images/photos/miniature-montagne.webp');background-size: cover;">
+                <!-- image du projet(url) & lien vers la page(href) -->
 
                 <p>(03) <span>Montagne</span></p> <!-- Titre du projet -->
             </a>
-            <a href="#" class="card background-image" style="background-image: url('/images/photos/miniature-urbex.webp');background-size: cover;"> <!-- image du projet(url) & lien vers la page(href) -->
+            <a href="#" class="card background-image"
+                style="background-image: url('/images/photos/miniature-urbex.webp');background-size: cover;">
+                <!-- image du projet(url) & lien vers la page(href) -->
 
                 <p>(04) <span>Explorations Urbaines</span></p> <!-- Titre du projet -->
             </a>
         </div>
     </section>
-   
+
 
 
     <section id="contact"> <!-- possibilité de dubliquer un 'li' pour rajouter un lien -->
         <div class="particles-js" id="particles-js-contact"></div>
         <ul>
-            <li><a href="#"><span>+</span>Youtube<img src="images/call-click-file.svg"></a></li> <!-- lien & titre modifiable -->
-            <li><a href="https://www.linkedin.com/in/tom-wainberg" target="_blank"><span>+</span>LinkedIn<img src="images/call-click-file.svg"></a></li> <!-- lien & titre modifiable -->
-            <li><a href="images/WAINBERG_Tom_CV.pdf" target="_blank"><span>+</span>CV<img src="images/call-click-file.svg"></a></li> <!-- lien & titre modifiable -->
+            <li><a href="#"><span>+</span>Youtube<img src="images/call-click-file.svg"></a></li>
+            <!-- lien & titre modifiable -->
+            <li><a href="https://www.linkedin.com/in/tom-wainberg" target="_blank"><span>+</span>LinkedIn<img
+                        src="images/call-click-file.svg"></a></li> <!-- lien & titre modifiable -->
+            <li><a href="images/WAINBERG_Tom_CV.pdf" target="_blank"><span>+</span>CV<img
+                        src="images/call-click-file.svg"></a></li> <!-- lien & titre modifiable -->
         </ul>
     </section>
     <footer>
         <p>&copy; Tom WAINBERG, 2024</p> <!-- possibilité de rajouter du contenu textuel -->
     </footer>
 </body>
+
 </html>
