changement de certaines polices et gras

--- a/pages/projects/beFake.html
+++ b/pages/projects/beFake.html
@@ -32,7 +32,7 @@
     <section id="project-page-title">
         <h1><span>(03) </span>BeFake.</h1>
         <p>
-            Nous avions comme objectif, avec <a href="https://simondaguetkargl.fr/" target="_blank">Simon Daguet--Kargl</a>, de réaliser un site web avec Ruby on Rails utilisant la technologie de génération d’image Midjourney. Nous avons alors eu l’idée de mettre en scène le réseau social se déclarant comme le plus authentique, avec cette technologie qui permet de créer n’importe quelle image factice en quelques secondes.            
+            Nous avions comme objectif, avec <a href="https://simondaguetkargl.fr/" target="_blank">Simon Daguet--Kargl</a>, de développer un site web avec le framework Ruby on Rails, e exploitant la technologie de génération d’images Midjourney. Pour contraster avec cette technologie qui permet de créer n’importe quelle image factice en quelques secondes, nous avons eu l'idée de mettre en scène le réseau social qui se veut le plus "authentique" : BeReal.
         </p>
        
         <p>
@@ -44,23 +44,21 @@
         <div class="project">
             <div class="background-image" style="background-image: url(/images/projets/befake-1.webp);background-size: cover;"></div>
             <div class="text">
-                <p class="text">Il fallait repenser l’interface utilisateur de BeReal afin de l’adapter à tous les formats d’écran, l’application n’étant disponible que sur smartphone. Cela nous a aussi permis de réfléchir aux différentes fonctionnalités que nous allions implémenter.</p>
+                <p class="text">Il a tout d’abord fallu repenser l’interface utilisateur de BeReal afin de l’adapter à tous les formats d’écran, l’application n’étant disponible que sur smartphone</p>
             </div>
         </div>
 
         <div class="project">
             <div class="background-image" style="background-image: url(/images/projets/befake-2.webp);;background-size: cover;"></div>
             <div class="text">
-                <p class="text">Il est possible d’importer deux images (caméra frontale et arrière), le nom d’utilisateur, une courte description et la localisation du post, à la manière de l’application originale.</p>
+                <p class="text">Il est finalement possible d’importer deux images (caméra avant et arrière), choisir son nom d’utilisateur, rédiger une courte description et spécifier la localisation du post, à la manière de l’application originale.</p>
             </div>
         </div>
 
-        <div class="project">
-            <div class="background-image" style="background-image: url(/images/projets/befake-3.webp);;background-size: cover;"></div>
-            <div class="text">
-                <p class="text">Enfin, nous avons enregistré et retravaillé la plupart des bruitages de la vidéo afin de donner vie à notre univers.</p>
-            </div>
-        </div>
+        <section id="project-page-title">
+            <p>
+                Le site est en libre accès en suivant <a href="https://befake.osc-fr1.scalingo.io/befakeposts" target="_blank">ce lien</a>. Vous pouvez parcourir les différents posts, rajouter vos propres BeFake, et modifier ou supprimer ceux existant. Afin de rendre le site accueillant, merci de ne pas publier de contenu offensant et de ne pas supprimer ou modifier des BeFake ne vous appartenant pas.            </p>
+        </section>
 
         <a class="backToHome" href="/index.html">retour à l'accueil</a>
 
