plein d'améliorations avec matthieu

--- a/index.html
+++ b/index.html
@@ -56,19 +56,21 @@
     <!-- HEADER / NAV / MENU -->
     <header>
         <nav>
-            <a href="#about">à propos</a>
-            <a href="#projects">projets</a>
-            <a href="#photos">photos</a>
-            <a href="#contact">me contacter</a>
+            <a href="/index.html">accueil</a>
+            <a href="/index.html#about">à propos</a>
+            <a href="/index.html#projects">projets</a>
+            <a href="/index.html#photos">photos</a>
+            <a href="/index.html#contact">me contacter</a>
             <button onclick="handleMenu()">menu</button>
         </nav>
     </header>
     <section id="menu">
         <nav>
-            <a href="#about" onclick="handleMenu()">à propos</a>
-            <a href="#photos" onclick="handleMenu()">photos</a>
-            <a href="/pages/projects.html" onclick="handleMenu()">projets</a>
-            <a href="#contact" onclick="handleMenu()">me contacter</a>
+            <a href="/index.html" onclick="handleMenu()">accueil</a>
+            <a href="/index.html#about" onclick="handleMenu()">à propos</a>
+            <a href="/index.html#projects" onclick="handleMenu()">projets</a>
+            <a href="/index.html#photos" onclick="handleMenu()">photos</a>
+            <a href="/index.html#contact" onclick="handleMenu()">me contacter</a>
             <button onclick="handleMenu()">close</button>
         </nav>
     </section>
