--- a/pages/projects.html
+++ b/pages/projects.html
@@ -6,11 +6,13 @@
     <link rel="stylesheet" href="/css/reset.css">
     <link rel="stylesheet" href="/css/main.css">
     <script src="/js/handleMenu.js" defer></script>
+    <link rel="icon" href="/images/iconWebsite.jpg" />
     <title>Tom Wainberg - Projets</title>
 </head>
 <body>
     <header>
         <nav>
+            <a href="/index.html">accueil</a>
             <a href="/index.html#about">à propos</a>
             <a href="/index.html#projects">projets</a>
             <a href="/index.html#photos">photos</a>
@@ -21,6 +23,7 @@
 
     <section id="menu">
         <nav>
+            <a href="/index.html" onclick="handleMenu()">accueil</a>
             <a href="/index.html#about" onclick="handleMenu()">à propos</a>
             <a href="/index.html#projects" onclick="handleMenu()">projets</a>
             <a href="/index.html#photos" onclick="handleMenu()">photos</a>
@@ -43,7 +46,7 @@
             </div>
         </div></a>
 
-        <a href="/index.html"><div class="project">
+        <a href="/pages/projects/escapadesTemporelles.html"><div class="project">
             <div class="background-image" style="background-image: url('/images/miniatures/miniature-escapades-temporelles.webp');background-size: cover;"></div>
             <div class="text">
                 <p class="title">Escapades Temporelles</p>
@@ -51,7 +54,7 @@
             </div>
         </div></a>
 
-        <a href="/index.html"><div class="project">
+        <a href="/pages/projects/beFake.html"><div class="project">
             <div class="background-image" style="background-image: url('/images/miniatures/miniature-befake.webp');background-size: cover;"></div>
             <div class="text">
                 <p class="title">BeFake.</p>
@@ -59,7 +62,7 @@
             </div>
         </div></a>
 
-        <a href="/index.html"><div class="project">
+        <a href="/pages/projects/refonteMusba.html"><div class="project">
             <div class="background-image" style="background-image: url('/images/miniatures/miniature-refonte-musba.webp');background-size: cover;"></div>
             <div class="text">
                 <p class="title">Refonte MusBA</p>
