--- a/pages/projects/escapadesTemporelles.html
+++ b/pages/projects/escapadesTemporelles.html
@@ -6,11 +6,14 @@
     <link rel="stylesheet" href="/css/reset.css">
     <link rel="stylesheet" href="/css/main.css">
     <script src="/js/handleMenu.js" defer></script>
+    <link rel="icon" href="/images/iconWebsite.jpg" />
+    <script src="/js/handleMenu.js" defer></script>
     <title>Tom Wainberg - Escapades Temporelles</title>
 </head>
 <body>
     <header>
         <nav>
+            <a href="/index.html">accueil</a>
             <a href="/index.html#about">à propos</a>
             <a href="/index.html#projects">projets</a>
             <a href="/index.html#photos">photos</a>
@@ -21,6 +24,7 @@
 
     <section id="menu">
         <nav>
+            <a href="/index.html" onclick="handleMenu()">accueil</a>
             <a href="/index.html#about" onclick="handleMenu()">à propos</a>
             <a href="/index.html#projects" onclick="handleMenu()">projets</a>
             <a href="/index.html#photos" onclick="handleMenu()">photos</a>
@@ -62,9 +66,12 @@
                 <p class="text">Enfin, nous avons enregistré et retravaillé la plupart des bruitages de la vidéo afin de donner vie à notre univers.</p>
             </div>
         </div>
+        <a class="big-btn-to-website" href="https://www.escapadestemporelles.fr/" target="_blank">Accéder au site<img src="/images/call-click-file.svg"></a>
 
-        <a class="backToHome" href="/index.html">retour à l'accueil</a>
-
+        <div class="boutons-back">
+            <a class="backToHome" href="/index.html">retour à l'accueil</a>
+            <a class="backToHome" href="/pages/projects.html">retour aux projets</a>
+        </div>
     </section>
 
     <footer>
