--- a/pages/projects/refonteMusba.html
+++ b/pages/projects/refonteMusba.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="/css/reset.css">
     <link rel="stylesheet" href="/css/main.css">
     <script src="/js/handleMenu.js" defer></script>
+    <link rel="icon" href="images/iconWebsite.jpg" />
     <title>Tom Wainberg - Théorie animée</title>
 </head>
 <body>
