--- a/pages/projects/beFake.html
+++ b/pages/projects/beFake.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="/css/reset.css">
     <link rel="stylesheet" href="/css/main.css">
     <script src="/js/handleMenu.js" defer></script>
+    <link rel="icon" href="images/iconWebsite.jpg" />
     <title>Tom Wainberg - BeFake</title>
 </head>
 <body>
@@ -59,6 +60,8 @@
             <p>
                 Le site est en libre accès en suivant <a href="https://befake.osc-fr1.scalingo.io/befakeposts" target="_blank">ce lien</a>. Vous pouvez parcourir les différents posts, rajouter vos propres BeFake, et modifier ou supprimer ceux existant. Afin de rendre le site accueillant, merci de ne pas publier de contenu offensant et de ne pas supprimer ou modifier des BeFake ne vous appartenant pas.            </p>
         </section>
+            
+        <a class="big-btn-to-website" href="https://befake.osc-fr1.scalingo.io/befakeposts" target="_blank">Accéder à BeFake<img src="/images/call-click-file.svg"></a>
 
         <a class="backToHome" href="/index.html">retour à l'accueil</a>
 
