rajout de l'accueil + icone

--- a/pages/projects/beFake.html
+++ b/pages/projects/beFake.html
@@ -6,12 +6,13 @@
     <link rel="stylesheet" href="/css/reset.css">
     <link rel="stylesheet" href="/css/main.css">
     <script src="/js/handleMenu.js" defer></script>
-    <link rel="icon" href="images/iconWebsite.jpg" />
+    <link rel="icon" href="/images/iconWebsite.jpg" />
     <title>Tom Wainberg - BeFake</title>
 </head>
 <body>
     <header>
         <nav>
+            <a href="/index.html">accueil</a>
             <a href="/index.html#about">à propos</a>
             <a href="/index.html#projects">projets</a>
             <a href="/index.html#photos">photos</a>
@@ -22,6 +23,7 @@
 
     <section id="menu">
         <nav>
+            <a href="/index.html" onclick="handleMenu()">accueil</a>
             <a href="/index.html#about" onclick="handleMenu()">à propos</a>
             <a href="/index.html#projects" onclick="handleMenu()">projets</a>
             <a href="/index.html#photos" onclick="handleMenu()">photos</a>
