--- a/pages/projects/refonteMusba.html
+++ b/pages/projects/refonteMusba.html
@@ -6,15 +6,16 @@
     <link rel="stylesheet" href="/css/reset.css">
     <link rel="stylesheet" href="/css/main.css">
     <script src="/js/handleMenu.js" defer></script>
-    <link rel="icon" href="images/iconWebsite.jpg" />
+    <link rel="icon" href="/images/iconWebsite.jpg" />
     <title>Tom Wainberg - Théorie animée</title>
 </head>
 <body>
     <header>
         <nav>
+            <a href="/index.html">accueil</a>
             <a href="/index.html#about">à propos</a>
-            <a href="/index.html#photos">audiovisuel</a>
             <a href="/index.html#projects">projets</a>
+            <a href="/index.html#photos">photos</a>
             <a href="/index.html#contact">me contacter</a>
             <button onclick="handleMenu()">menu</button>
         </nav>
@@ -22,9 +23,10 @@
 
     <section id="menu">
         <nav>
+            <a href="/index.html" onclick="handleMenu()">accueil</a>
             <a href="/index.html#about" onclick="handleMenu()">à propos</a>
-            <a href="/index.html#photos" onclick="handleMenu()">audiovisuel</a>
             <a href="/index.html#projects" onclick="handleMenu()">projets</a>
+            <a href="/index.html#photos" onclick="handleMenu()">photos</a>
             <a href="/index.html#contact" onclick="handleMenu()">me contacter</a>
             <button onclick="handleMenu()">close</button>
         </nav>
