changer pages projets ET et MusBA

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
         <h2>Projets</h2>
 
         <div class="container">
-            <a href="/pages/projects/escapadesTemporelles.html" class="card background-image" id="card-escapades">
+            <a href="https://www.escapadestemporelles.fr/" target="_blank" class="card background-image" id="card-escapades">
                 <!-- image du projet(url) & lien vers la page(href) -->
                 <p>(02) <span>Escapades Temporelles</span></p> <!-- Titre du projet -->
             </a>
@@ -127,7 +127,7 @@
                 <p>(03) <span>BeFake.</span></p> <!-- Titre du projet -->
             </a>
 
-            <a href="/pages/projects/refonteMusba.html" class="card background-image" id="card-musba">
+            <a href="https://musba.netlify.app/" target="_blank" class="card background-image" id="card-musba">
                 <!-- image du projet(url) & lien vers la page(href) -->
                 <p>(04) <span>Refonte MusBa</span></p> <!-- Titre du projet -->
             </a>
