--- a/pages/projects.html
+++ b/pages/projects.html
@@ -46,7 +46,7 @@
             </div>
         </div></a>
 
-        <a href="/pages/projects/escapadesTemporelles.html"><div class="project">
+        <a href="https://www.escapadestemporelles.fr/" target="_blank"><div class="project">
             <div class="background-image" style="background-image: url('/images/miniatures/miniature-escapades-temporelles.webp');background-size: cover;"></div>
             <div class="text">
                 <p class="title">Escapades Temporelles</p>
@@ -62,7 +62,7 @@
             </div>
         </div></a>
 
-        <a href="/pages/projects/refonteMusba.html"><div class="project">
+        <a href="https://musba.netlify.app/" target="_blank"><div class="project">
             <div class="background-image" style="background-image: url('/images/miniatures/miniature-refonte-musba.webp');background-size: cover;"></div>
             <div class="text">
                 <p class="title">Refonte MusBA</p>
