--- a/index.html
+++ b/index.html
@@ -140,13 +140,13 @@
         <h2>Photos</h2>
 
         <div class="container">
-            <a href="#" class="card background-image"
+            <a href="https://www.behance.net/gallery/193965507/Bordeaux" target="_blank" class="card background-image"
                 style="background-image: url('/images/photos/miniature-bordeaux.webp');background-size: cover;">
                 <!-- image du projet(url) & lien vers la page(href) -->
                 <p>(02) <span>Bordeaux</span></p> <!-- Titre du projet -->
             </a>
 
-            <a href="#" class="card background-image"
+            <a href="https://www.behance.net/gallery/193833567/Paris-13" target="_blank" class="card background-image"
                 style="background-image: url('/images/photos/miniature-paris.webp');background-size: cover;">
                 <!-- image du projet(url) & lien vers la page(href) -->
 
@@ -155,13 +155,13 @@
         </div>
 
         <div class="container">
-            <a href="#" class="card background-image"
+            <a href="https://www.behance.net/gallery/193965621/Montagne" target="_blank" class="card background-image"
                 style="background-image: url('/images/photos/miniature-montagne.webp');background-size: cover;">
                 <!-- image du projet(url) & lien vers la page(href) -->
 
                 <p>(03) <span>Montagne</span></p> <!-- Titre du projet -->
             </a>
-            <a href="#" class="card background-image"
+            <a href="https://www.behance.net/gallery/193832437/Exploration-Urbaine" target="_blank" class="card background-image"
                 style="background-image: url('/images/photos/miniature-urbex.webp');background-size: cover;">
                 <!-- image du projet(url) & lien vers la page(href) -->
 
