Ajout de la page MusBA

--- a/pages/projects.html
+++ b/pages/projects.html
@@ -62,7 +62,7 @@
             </div>
         </div></a>
 
-        <a href="https://musba.netlify.app/" target="_blank"><div class="project">
+        <a href="/pages/projects/refonteMusba.html" target="_blank"><div class="project">
             <div class="background-image" style="background-image: url('/images/miniatures/miniature-refonte-musba.webp');background-size: cover;"></div>
             <div class="text">
                 <p class="title">Refonte MusBA</p>
