--- a/pages/projects/beFake.html
+++ b/pages/projects/beFake.html
@@ -65,7 +65,11 @@
             
         <a class="big-btn-to-website" href="https://befake.osc-fr1.scalingo.io/befakeposts" target="_blank">Accéder à BeFake<img src="/images/call-click-file.svg"></a>
 
-        <a class="backToHome" href="/index.html">retour à l'accueil</a>
+
+        <div class="boutons-back">
+            <a class="backToHome" href="/index.html">retour à l'accueil</a>
+            <a class="backToHome" href="/pages/projects.html">retour aux projets</a>
+        </div>
 
     </section>
 
