remplacement de cover par contain

--- a/pages/projects/beFake.html
+++ b/pages/projects/beFake.html
@@ -45,14 +45,14 @@
     <section id="firstMotion">
 
         <div class="project">
-            <div class="background-image" style="background-image: url(/images/projets/befake-1.webp);background-size: cover;"></div>
+            <div class="background-image" style="background-image: url(/images/projets/befake-1.webp);background-size: contain;"></div>
             <div class="text">
                 <p class="text">Il a tout d’abord fallu repenser l’interface utilisateur de BeReal afin de l’adapter à tous les formats d’écran, l’application n’étant disponible que sur smartphone</p>
             </div>
         </div>
 
         <div class="project">
-            <div class="background-image" style="background-image: url(/images/projets/befake-2.webp);;background-size: cover;"></div>
+            <div class="background-image" style="background-image: url(/images/projets/befake-2.webp);;background-size: contain;"></div>
             <div class="text">
                 <p class="text">Il est finalement possible d’importer deux images (caméra avant et arrière), choisir son nom d’utilisateur, rédiger une courte description et spécifier la localisation du post, à la manière de l’application originale.</p>
             </div>
