--- a/pages/projects/publicActif.html
+++ b/pages/projects/publicActif.html
@@ -55,14 +55,14 @@
         </div>
 
         <div class="project">
-            <div class="background-image" style="background-image: url(/images/projets/public-actif-2.webp);;background-size: cover;"></div>
+            <div class="background-image" style="background-image: url(/images/projets/public-actif-2.webp);;background-size: contain;"></div>
             <div class="text">
                 <p class="text">Nous avons utilisé Illustrator pour concevoir toutes les illustrations, After Effects pour les animer et Premiere Pro pour  assembler l’ensemble des rush. </p>
             </div>
         </div>
 
         <div class="project">
-            <div class="background-image" style="background-image: url(/images/projets/public-actif-3.webp);;background-size: cover;"></div>
+            <div class="background-image" style="background-image: url(/images/projets/public-actif-3.webp);;background-size: contain;"></div>
             <div class="text">
                 <p class="text">Enfin, nous avons enregistré et retravaillé la plupart des bruitages de la vidéo afin de donner vie à notre univers.</p>
             </div>
