ajout de alterMMI

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                 <p>(03) <span>BeFake.</span></p> <!-- Titre du projet -->
             </a>
 
-            <a href="/pages/projects/refonteMusba.html" target="_blank" class="card background-image" id="card-musba">
+            <a href="/pages/projects/refonteMusba.html" class="card background-image" id="card-musba">
                 <!-- image du projet(url) & lien vers la page(href) -->
                 <p>(04) <span>Refonte MusBa</span></p> <!-- Titre du projet -->
             </a>
