--- a/pages/projects.html
+++ b/pages/projects.html
@@ -70,6 +70,14 @@
             </div>
         </div></a>
 
+        <a href="/pages/projects/alterMmi.html"><div class="project">
+            <div class="background-image" style="background-image: url('/images/miniatures/miniature-altermmi.webp');background-size: cover;"></div>
+            <div class="text">
+                <p class="title">Alter'MMI</p>
+                <p class="text">Réalisation d'une vidéo pour présenter l'alternance d'un camarade.</p>
+            </div>
+        </div></a>
+
 
         <a class="backToHome" href="/index.html">retour à l'accueil</a>
 
