Ajout des vidéos Youtube pour public actif et alter'mmi

--- a/pages/projects/alterMmi.html
+++ b/pages/projects/alterMmi.html
@@ -65,7 +65,7 @@
 
         <div class="video">
             <p>Présentation du développement back-end :</p>
-            <iframe class="videoProject" width="80%" src="https://www.behance.net/gallery/194005239/AlterMMI"  allowfullscreen lazyload frameborder="0" allow="clipboard-write" refererPolicy="strict-origin-when-cross-origin"></iframe>
+            <iframe class="videoProject" width="80%" src="https://www.youtube.com/embed/vQEaPqHqpFc?si=W0tI90T0Bhi0qsy_" title="Vidéo Alter'MMI" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen style="border-radius: 10px"></iframe>
         </div>
 
         <div class="boutons-back">
