--- a/pages/projects/publicActif.html
+++ b/pages/projects/publicActif.html
@@ -70,7 +70,7 @@
 
         <div class="video">
             <p>La théorie du Public Actif de Gabriel Tarde :</p>
-            <iframe class="videoProject" width="80%" src="https://www.behance.net/embed/project/186630391?ilo0=1"  allowfullscreen lazyload frameborder="0" allow="clipboard-write" refererPolicy="strict-origin-when-cross-origin"></iframe>
+            <iframe class="videoProject" width="80%" src="https://www.youtube.com/embed/6LYfe4mrv_s?si=trlw5mHfHdiTvPXb" title="Théorie du Public Actif" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen style="border-radius: 10px"></iframe>
         </div>
 
         <div class="boutons-back">
