amélioration de la page de ET

--- a/pages/projects/escapadesTemporelles.html
+++ b/pages/projects/escapadesTemporelles.html
@@ -5,10 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/css/reset.css">
     <link rel="stylesheet" href="/css/main.css">
-    <script src="/js/handleMenu.js" defer></script>
     <link rel="icon" href="/images/iconWebsite.jpg" />
     <script src="/js/handleMenu.js" defer></script>
-    <title>Tom Wainberg - Escapades Temporelles</title>
+    <title>Tom Wainberg - Public Actif</title>
+    <script defer src="/js/iframeResize.js"></script>
 </head>
 <body>
     <header>
@@ -54,24 +54,31 @@
         </div>
 
         <div class="project">
-            <div class="background-image" style="background-image: url(/images/projets/public-actif-2.webp);;background-size: cover;"></div>
+            <div class="background-image" style="background-image: url(/images/projets/public-actif-2.webp);;background-size: contain;"></div>
             <div class="text">
                 <p class="text">Nous avons utilisé Illustrator pour concevoir toutes les illustrations, After Effects pour les animer et Premiere Pro pour  assembler l’ensemble des rush. </p>
             </div>
         </div>
 
         <div class="project">
-            <div class="background-image" style="background-image: url(/images/projets/public-actif-3.webp);;background-size: cover;"></div>
+            <div class="background-image" style="background-image: url(/images/projets/public-actif-3.webp);;background-size: contain;"></div>
             <div class="text">
                 <p class="text">Enfin, nous avons enregistré et retravaillé la plupart des bruitages de la vidéo afin de donner vie à notre univers.</p>
             </div>
         </div>
-        <a class="big-btn-to-website" href="https://www.escapadestemporelles.fr/" target="_blank">Accéder au site<img src="/images/call-click-file.svg"></a>
+
+        <div class="video">
+            <p>Trailer de Escapades Temporelles :</p>
+            <iframe class="videoProject" width="80%" src="https://www.youtube.com/embed/gizNO3AUA10?si=9eJOdiqSxO5FIqzF" title="Trailer Escapades Temporelles" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen style="border-radius: 10px"></iframe>
+        </div>
+        <a class="big-btn-to-website" href="https://escapadestemporelles.fr/download.html" target="_blank">Télécharger le jeu<img src="/images/call-click-file.svg"></a>
+
 
         <div class="boutons-back">
             <a class="backToHome" href="/index.html">retour à l'accueil</a>
             <a class="backToHome" href="/pages/projects.html">retour aux projets</a>
         </div>
+
     </section>
 
     <footer>
