--- a/pages/projects.html
+++ b/pages/projects.html
@@ -74,7 +74,7 @@
             <div class="background-image" style="background-image: url('/images/miniatures/miniature-altermmi.webp');background-size: cover;"></div>
             <div class="text">
                 <p class="title">Alter'MMI</p>
-                <p class="text">Réalisation d'une vidéo pour présenter l'alternance d'un camarade.</p>
+                <p class="text">Réalisation d'une vidéo pour présenter le métier de développeur back-end.</p>
             </div>
         </div></a>
 
